--- a/configs/quick_start/professional/MobileNetV3_large_x1_0_emptyjudge_finetune.yaml
+++ b/configs/quick_start/professional/MobileNetV3_large_x1_0_emptyjudge_finetune.yaml
@@ -31,8 +31,8 @@ OPTIMIZER:
 TRAIN:
     batch_size: 1024
     num_workers: 4
-    file_list: "/data/ieemoo/judgeEmpty/data/train_list.txt"
-    data_dir: "/data/ieemoo/judgeEmpty/data/"
+    file_list: "/data/pfc/judgeEmpty/train_list.txt"
+    data_dir: "/data/pfc/judgeEmpty/"
     shuffle_seed: 0
     transforms:
         - DecodeImage:
@@ -57,8 +57,8 @@ TRAIN:
 VALID:
     batch_size: 256
     num_workers: 0
-    file_list: "/data/ieemoo/judgeEmpty/data/test_list.txt"
-    data_dir: "/data/ieemoo/judgeEmpty/data/"
+    file_list: "/data/pfc/judgeEmpty/test_list.txt"
+    data_dir: "/data/pfc/judgeEmpty/"
     shuffle_seed: 0
     transforms:
         - DecodeImage:
