--- a/configs/quick_start/ResNet50_vd_finetune_emptyjudge.yaml
+++ b/configs/quick_start/ResNet50_vd_finetune_emptyjudge.yaml
@@ -1,14 +1,12 @@
 mode: 'train'
 ARCHITECTURE:
-    name: "MobileNetV3_large_x1_0"
-    
-checkpoints: ""
-pretrained_model: "./pretrained/MobileNetV3_large_x1_0_pretrained"
+    name: 'ResNet50_vd'
+pretrained_model: "./pretrained/ResNet50_vd_pretrained"
 model_save_dir: "./output/"
+use_gpu: True
 classes_num: 2
 total_images: 75150
 save_interval: 1
-ls_epsilon: 0.1
 validate: True
 valid_interval: 1
 epochs: 100
@@ -16,8 +14,8 @@ topk: 1
 image_shape: [3, 224, 224]
 
 LEARNING_RATE:
-    function: 'Cosine'
-    params:
+    function: 'Cosine'          
+    params:                   
         lr: 0.00375
 
 OPTIMIZER:
@@ -29,7 +27,7 @@ OPTIMIZER:
         factor: 0.000001
 
 TRAIN:
-    batch_size: 128
+    batch_size: 64
     num_workers: 4
     file_list: "/root/data/pfc/data/train_list.txt"
     data_dir: "/root/data/pfc/data/"
@@ -42,15 +40,12 @@ TRAIN:
             size: 224
         - RandFlipImage:
             flip_code: 1
-        - AutoAugment:
         - NormalizeImage:
             scale: 1./255.
             mean: [0.485, 0.456, 0.406]
             std: [0.229, 0.224, 0.225]
             order: ''
         - ToCHWImage:
-
-
 
 VALID:
     batch_size: 20
@@ -72,5 +67,3 @@ VALID:
             std: [0.229, 0.224, 0.225]
             order: ''
         - ToCHWImage:
-
-
