--- a/configs/quick_start/new_user/ShuffleNetV2_x1_5.yaml
+++ b/configs/quick_start/new_user/ShuffleNetV2_x1_5.yaml
@@ -1,14 +1,12 @@
 mode: 'train'
 ARCHITECTURE:
-    name: "MobileNetV3_large_x1_0"
-    
-checkpoints: ""
-pretrained_model: "./pretrained/MobileNetV3_large_x1_0_pretrained"
+    name: "ShuffleNetV2_x1_5"
+
+pretrained_model: "./pretrained/ShuffleNetV2_x1_5_pretrained"
 model_save_dir: "./output/"
 classes_num: 2
 total_images: 75150
 save_interval: 1
-ls_epsilon: 0.1
 validate: True
 valid_interval: 1
 epochs: 100
@@ -26,10 +24,10 @@ OPTIMIZER:
         momentum: 0.9
     regularizer:
         function: 'L2'
-        factor: 0.000001
+        factor: 0.00004
 
 TRAIN:
-    batch_size: 128
+    batch_size: 256
     num_workers: 4
     file_list: "/root/data/pfc/data/train_list.txt"
     data_dir: "/root/data/pfc/data/"
@@ -40,9 +38,9 @@ TRAIN:
             channel_first: False
         - RandCropImage:
             size: 224
+            ratio: [1.0, 1.0]
         - RandFlipImage:
             flip_code: 1
-        - AutoAugment:
         - NormalizeImage:
             scale: 1./255.
             mean: [0.485, 0.456, 0.406]
@@ -53,8 +51,8 @@ TRAIN:
 
 
 VALID:
-    batch_size: 20
-    num_workers: 0
+    batch_size: 64
+    num_workers: 4
     file_list: "/root/data/pfc/data/test_list.txt"
     data_dir: "/root/data/pfc/data/"
     shuffle_seed: 0
