--- a/configs/quick_start/professional/GhostNet_x1_0_emptyjudge_finetune.yaml
+++ b/configs/quick_start/professional/GhostNet_x1_0_emptyjudge_finetune.yaml
@@ -1,24 +1,25 @@
 mode: 'train'
 ARCHITECTURE:
-    name: "MobileNetV3_large_x1_0"
-    
-checkpoints: ""
-pretrained_model: "./pretrained/MobileNetV3_large_x1_0_pretrained"
+    name: 'GhostNet_x1_0'
+
+pretrained_model: "./pretrained/GhostNet_x1_0_pretrained"
 model_save_dir: "./output/"
 classes_num: 2
 total_images: 75150
 save_interval: 1
-ls_epsilon: 0.1
 validate: True
 valid_interval: 1
 epochs: 100
 topk: 1
 image_shape: [3, 224, 224]
 
+use_mix: False
+ls_epsilon: 0.1
+
 LEARNING_RATE:
-    function: 'Cosine'
-    params:
-        lr: 0.00375
+    function: 'CosineWarmup'          
+    params:                   
+        lr: 0.4               
 
 OPTIMIZER:
     function: 'Momentum'
@@ -26,7 +27,7 @@ OPTIMIZER:
         momentum: 0.9
     regularizer:
         function: 'L2'
-        factor: 0.000001
+        factor: 0.0000400
 
 TRAIN:
     batch_size: 128
@@ -42,7 +43,6 @@ TRAIN:
             size: 224
         - RandFlipImage:
             flip_code: 1
-        - AutoAugment:
         - NormalizeImage:
             scale: 1./255.
             mean: [0.485, 0.456, 0.406]
@@ -50,11 +50,9 @@ TRAIN:
             order: ''
         - ToCHWImage:
 
-
-
 VALID:
-    batch_size: 20
-    num_workers: 0
+    batch_size: 64
+    num_workers: 4
     file_list: "/root/data/pfc/data/test_list.txt"
     data_dir: "/root/data/pfc/data/"
     shuffle_seed: 0
@@ -72,5 +70,3 @@ VALID:
             std: [0.229, 0.224, 0.225]
             order: ''
         - ToCHWImage:
-
-
