--- a/configs/quick_start/professional/MobileNetV3_large_x1_0_ssld_emptyjudge_finetune.yaml
+++ b/configs/quick_start/professional/MobileNetV3_large_x1_0_ssld_emptyjudge_finetune.yaml
@@ -1,6 +1,6 @@
 mode: 'train'
 ARCHITECTURE:
-    name: "MobileNetV3_large_x1_0_ssld"
+    name: "MobileNetV3_large_x1_0"
     
 checkpoints: ""
 pretrained_model: "./pretrained/MobileNetV3_large_x1_0_ssld_pretrained"
@@ -18,7 +18,7 @@ image_shape: [3, 224, 224]
 LEARNING_RATE:
     function: 'CosineWarmup'
     params:
-        lr: 1.3
+        lr: 0.1
         warmup_epoch: 5
 
 OPTIMIZER:
@@ -30,8 +30,8 @@ OPTIMIZER:
         factor: 0.00002
 
 TRAIN:
-    batch_size: 64
-    num_workers: 4
+    batch_size: 128
+    num_workers: 2
     file_list: "/root/data/pfc/data/train_list.txt"
     data_dir: "/root/data/pfc/data/"
     shuffle_seed: 0
@@ -56,7 +56,7 @@ TRAIN:
 VALID:
     batch_size: 20
     num_workers: 0
-    file_list: "/root/data/pfc/data/val_list.txt"
+    file_list: "/root/data/pfc/data/test_list.txt"
     data_dir: "/root/data/pfc/data/"
     shuffle_seed: 0
     transforms:
