--- a/configs/quick_start/new_user/ShuffleNetV2_x0_25_emptyjudge.yaml
+++ b/configs/quick_start/new_user/ShuffleNetV2_x0_25_emptyjudge.yaml
@@ -9,11 +9,13 @@ classes_num: 2
 total_images: 75150
 save_interval: 1
 validate: True
-use_gpu: True
+use_gpu: False
 valid_interval: 1
 epochs: 100
 topk: 1
 image_shape: [3, 224, 224]
+
+ls_epsilon: 0.00001
 
 LEARNING_RATE:
     function: 'Cosine'          
@@ -29,10 +31,10 @@ OPTIMIZER:
         factor: 0.00001
 
 TRAIN:
-    batch_size: 512
+    batch_size: 512 
     num_workers: 10
-    file_list: "/root/data/pfc/data/train_list.txt"
-    data_dir: "/root/data/pfc/data/"
+    file_list: "/data/ieemoo/judgeEmpty/data/train_list.txt"
+    data_dir: "/data/ieemoo/judgeEmpty/data/"
     shuffle_seed: 0
     transforms:
         - DecodeImage:
@@ -52,8 +54,8 @@ TRAIN:
 VALID:
     batch_size: 100
     num_workers: 0
-    file_list: "/root/data/pfc/data/test_list.txt"
-    data_dir: "/root/data/pfc/data/"
+    file_list: "/data/ieemoo/judgeEmpty/data/test_list.txt"
+    data_dir: "/data/ieemoo/judgeEmpty/data/"
     shuffle_seed: 0
     transforms:
         - DecodeImage:
