--- a/configs/quick_start/new_user/ShuffleNetV2_x0_25_emptyjudge_cpu.yaml
+++ b/configs/quick_start/new_user/ShuffleNetV2_x0_25_emptyjudge_cpu.yaml
@@ -6,10 +6,10 @@ checkpoints: ""
 pretrained_model: ""
 model_save_dir: "./output/"
 classes_num: 2
-total_images: 76634
+total_images: 76848
 save_interval: 1
 validate: True
-use_gpu: True
+use_gpu: False
 valid_interval: 1
 epochs: 100
 topk: 1
@@ -31,10 +31,10 @@ OPTIMIZER:
         factor: 0.00001
 
 TRAIN:
-    batch_size: 512 
+    batch_size: 128 
     num_workers: 10
-    file_list: "/root/data/pfc/data/train_list.txt"
-    data_dir: "/root/data/pfc/data/"
+    file_list: "/data/ieemoo/judgeEmpty/data/train_list.txt"
+    data_dir: "/data/ieemoo/judgeEmpty/data/"
     shuffle_seed: 0
     transforms:
         - DecodeImage:
@@ -52,10 +52,10 @@ TRAIN:
         - ToCHWImage:
 
 VALID:
-    batch_size: 100
+    batch_size: 10
     num_workers: 0
-    file_list: "/root/data/pfc/data/test_list.txt"
-    data_dir: "/root/data/pfc/data/"
+    file_list: "/data/ieemoo/judgeEmpty/data/test_list.txt"
+    data_dir: "/data/ieemoo/judgeEmpty/data/"
     shuffle_seed: 0
     transforms:
         - DecodeImage:
